--- a/src/components/pages/article/content-body.scss
+++ b/src/components/pages/article/content-body.scss
@@ -1,110 +1,29 @@
 @use '../../../assets/scss/mixins';
-@import '@redgoose/markdown-style/dist/body.scss';
+@import url('https://assets.redgoose.me/markdown/index.css');
 
 .redgoose-body {
-  --size-margin: 2rem 0;
-  --img-margin: 4rem 0 2rem;
-  h1, h2, h3, h4, h5, h6 {
-    scroll-margin-top: calc(var(--size-header-height) + 30px);
-    .anchor {
-      display: none;
+  --markdown-color-base: var(--color-text);
+  --markdown-color-title: var(--color-edge);
+  --markdown-color-key: var(--color-key);
+  --markdown-size-margin: 2rem;
+  --markdown-size-img-margin: 4rem 0 2rem;
+  --markdown-color-blockquote-line: var(--color-key);
+  --markdown-color-blockquote-outline: hsl(0 0% 88%);
+  --markdown-head-scroll-margin-top: calc(var(--size-header-height) + 30px);
+  --markdown-size-side-padding: var(--size-side-padding);
+  @include mixins.dark-mode() {
+    --markdown-color-blockquote-outline: hsl(0 0% 24%);
+    --markdown-color-code-bg: hsl(0 0% 8%);
+  }
+  :global(:is(h1, h2, h3, h4, h5, h6)) {
+    @include mixins.responsive(tablet) {
+      :global(.anchor svg) {
+        color: hsl(var(--color-text-blur-hsl));
+      }
     }
   }
-  img {
-    position: relative;
-    left: 50%;
-    max-width: 100vw;
-    transform: translateX(-50%);
-    transform-origin: 50% 50%;
-    transition: opacity 200ms ease-out;
+  :global(img) {
     cursor: pointer;
     @include mixins.button-setup();
-    @include mixins.responsive(desktop) {
-      max-width: 1000px;
-    }
-    @include mixins.responsive(max) {
-      max-width: 1400px;
-    }
-    @media (max-width: 320px) {
-      max-width: 100%;
-    }
-  }
-  code {
-    color: var(--color-sub);
-    background: hsl(var(--color-edge-hsl) / 8%);
-    padding: .2em .4em;
-    border-radius: 4px;
-    font-size: 85%;
-    white-space: break-spaces;
-  }
-  pre {
-    position: relative;
-    left: 50%;
-    width: calc(100vw - (var(--article-side-padding) * 1));
-    max-width: 820px;
-    transform: translateX(-50%);
-    transform-origin: 50% 50%;
-    box-sizing: border-box;
-    background: hsl(0 0% 20%);
-    border-radius: 4px;
-    line-height: 1.62;
-    color-scheme: dark;
-    padding: 1.5rem;
-    box-shadow:
-      0 4px 36px hsl(0 0% 0% / 25%),
-      0 8px 24px hsl(0 0% 0% / 25%);
-    > code {
-      color: hsl(0 0% 90%);
-    }
-  }
-  @include mixins.responsive(tablet) {
-    h1, h2, h3, h4, h5, h6 {
-      position: relative;
-      .anchor {
-        display: block;
-        position: absolute;
-        left: -42px;
-        top: 50%;
-        opacity: 0;
-        transition: opacity 100ms ease-out;
-        transform: translateY(-50%);
-        padding: 10px;
-        box-sizing: border-box;
-        svg {
-          display: block;
-          width: 20px;
-          aspect-ratio: 1 / 1;
-          color: hsl(var(--color-text-blur-hsl));
-          stroke-width: 1.75;
-        }
-      }
-      @include mixins.hover() {
-        .anchor {
-          opacity: 1;
-        }
-      }
-    }
-  }
-
-  // grid
-  .grid-item {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100vw;
-    max-width: 1280px;
-    transform-origin: 50% 50%;
-    > p {
-      > img {
-        position: static;
-      }
-    }
-    @include mixins.responsive(desktop) {
-      width: 90vw;
-    }
-    @media (max-width: 320px) {
-      transform: none;
-      left: auto;
-    }
   }
 }
