스타일 수정

--- a/src/components/layout/header/index.scss
+++ b/src/components/layout/header/index.scss
@@ -233,9 +233,9 @@
           margin: 0;
           padding: 0 20px;
           font-family: var(--font-eng);
-          font-weight: 600;
+          font-weight: 700;
           font-size: .875rem;
-          color: var(--color-text);
+          color: var(--color-edge);
           text-decoration: none;
           transition: color 120ms ease-out, background 120ms ease-out;
           &:active {
