--- a/src/pages/article.scss
+++ b/src/pages/article.scss
@@ -4,6 +4,7 @@
   --article-side-padding: 24px;
   --article-top-margin: 42px;
   margin: var(--article-top-margin) 0 0;
+  padding: 0 var(--article-side-padding);
   &__header {
     text-align: center;
     padding: 0 var(--article-side-padding);
@@ -48,7 +49,6 @@
   }
   &__body {
     margin: 24px 0 0;
-    padding: 0 var(--article-side-padding);
     min-height: 15vh;
   }
   &__star {
@@ -63,10 +63,6 @@
   @include mixins.responsive(tablet) {
     --article-side-padding: 62px;
     --article-top-margin: 52px;
-    &__wrap {
-      max-width: 900px;
-      margin: 0 auto;
-    }
     &__header {
       p {
         span, em {
@@ -81,7 +77,8 @@
       }
     }
     &__body {
-      margin: 48px 0 0;
+      max-width: 900px;
+      margin: 48px auto 0;
     }
   }
   @include mixins.dark-mode() {
