다크모드 이미지 엘리먼트 적용

--- a/src/components/pages/article/lightbox.scss
+++ b/src/components/pages/article/lightbox.scss
@@ -22,6 +22,10 @@
       object-fit: contain;
       border-radius: 2px;
     }
+    goose-dark-mode-image {
+      max-width: 92vw;
+      //max-height: 96vh;
+    }
   }
   &__close {
     position: absolute;
