--- a/src/components/pages/article/content-body.scss
+++ b/src/components/pages/article/content-body.scss
@@ -22,7 +22,7 @@
       }
     }
   }
-  :global(img) {
+  :global(:is(img, goose-dark-mode-image)) {
     cursor: pointer;
     @include mixins.button-setup();
   }
