--- a/src/components/pages/article/lightbox.scss
+++ b/src/components/pages/article/lightbox.scss
@@ -17,14 +17,15 @@
     height: 100%;
     img {
       display: block;
-      max-width: 92vw;
-      max-height: 96vh;
+      max-width: 100vw;
+      max-height: 100vh;
       object-fit: contain;
       border-radius: 2px;
     }
     goose-dark-mode-image {
-      max-width: 92vw;
-      //max-height: 96vh;
+      --goose-dmi-max-width: 100vw;
+      --goose-dmi-max-height: 100vh;
+      --goose-dmi-object-fit: contain;
     }
   }
   &__close {
