--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,7 +20,7 @@
   --font-base: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --font-eng: 'ortsa', Helvetica, Arial, sans-serif;
   --font-code: 'Monaco', 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
-  @include mixins.dark-mode() {
+  @include mixins.dark-mode-root() {
     color-scheme: dark;
     --color-text-hsl: 0 0% 85%;
     --color-edge-hsl: 0 0% 98%;
