작은 수정 및 조정

--- a/client/components/content/category.scss
+++ b/client/components/content/category.scss
@@ -129,7 +129,7 @@
       line-height: 1.15;
     }
     a {
-      :hover {
+      &:hover {
         text-decoration: underline;
       }
       &:active {
