#12 #11 RSS 추가, error 화면 조정

--- a/client/pages/home/index.scss
+++ b/client/pages/home/index.scss
@@ -21,9 +21,8 @@
 }
 
 .empty {
-  height: 100dvh;
-  min-height: calc(72dvh - var(--size-header-height));
-  max-height: calc(72dvh - var(--size-header-height));
+  height: auto;
+  padding: 32px 0 24px;
 }
 
 .pagination {
